--- a/LLH_Investment and Portfolio Management Group Project.ipynb
+++ b/LLH_Investment and Portfolio Management Group Project.ipynb
@@ -185,6 +185,16 @@
     "\n",
     "Q&A section *[10 points]*."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d4c651",
+   "metadata": {},
+   "source": [
+    "part 3 is important\n",
+    "part 4: compare with the index (跟 DAX 的比例為和不同)\n",
+    "part 6: out of sample"
+   ]
   }
  ],
  "metadata": {
