--- a/part1.ipynb
+++ b/part1.ipynb
@@ -1183,10 +1183,12 @@
     "# Equal-Weighted Index (EWI)\n",
     "EWI = df_prc.pct_change().mean(axis=1)\n",
     "EWI[0] = 0\n",
-    "EWI = EWI + 1\n",
+    "EWI = EWI + 1 # 轉變為實際報酬\n",
     "EWI = EWI.cumprod()\n",
     "EWI = pd.DataFrame(EWI.rename('EWI'))\n",
-    "EWI.tail()"
+    "EWI.tail()\n",
+    "\n",
+    "# 2021.11.26: EWI: 每個成分股的權重都是 1/n，所以整個指數每日的報酬就是所有成分股每日報酬的平均"
    ]
   },
   {
