--- a/notes/capm.ipynb
+++ b/notes/capm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        " 'F-F Research Data Factors\\n-------------------------\\n\\nThis file was created by CMPT_ME_BEME_RETS using the 202110 CRSP database. The 1-month TBill return is from Ibbotson and Associates, Inc. Copyright 2021 Kenneth R. French\\n\\n  0 : (1144 rows x 4 cols)\\n  1 : Annual Factors: January-December (94 rows x 4 cols)')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "dict"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        " [700 rows x 15 columns])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "1963-11   -0.85  0.27  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "Freq: M, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "[2 rows x 700 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "[700 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -722,8 +722,8 @@
       "Dep. Variable:                      R   R-squared:                       0.810\n",
       "Model:                            OLS   Adj. R-squared:                  0.809\n",
       "Method:                 Least Squares   F-statistic:                     2969.\n",
-      "Date:                Tue, 14 Dec 2021   Prob (F-statistic):          1.19e-253\n",
-      "Time:                        10:49:30   Log-Likelihood:                -1858.0\n",
+      "Date:                Wed, 15 Dec 2021   Prob (F-statistic):          1.19e-253\n",
+      "Time:                        21:15:33   Log-Likelihood:                -1858.0\n",
       "No. Observations:                 700   AIC:                             3720.\n",
       "Df Residuals:                     698   BIC:                             3729.\n",
       "Df Model:                           1                                         \n",
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "Freq: M, Length: 700, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "Freq: M, Length: 700, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "Freq: M, Name: Mkt-RF, Length: 700, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "0.5887"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "0.3672"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "[700 rows x 12 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1250,9 +1250,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
       "const     0.115454\n",
       "Mkt-RF    0.730210\n",
-      "dtype: float64\n"
+      "dtype: float64\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n"
      ]
     }
    ],
@@ -1260,6 +1270,7 @@
     "for c in range(10): # 因為 df 將全部資料以 10 個百分位呈現\n",
     "    R = df.iloc[:, c].subtract(RF, axis=0) # axis=0: column 對 column 相減\n",
     "    TSR = sm.OLS(R, sm.add_constant(MKT)).fit()\n",
+    "    print(type(TSR.params))\n",
     "    if c==1: # 查看 params 是甚麼\n",
     "        print(type(TSR.params))\n",
     "        print(TSR.params)\n",
@@ -1268,6 +1279,60 @@
     " \n",
     "    AvgR.append(R.mean()) # 個股超額報酬\n",
     "    AvgRHat.append(AvgMkt * TSR.params[1]) # 市場超額報酬 * 模型預估的 beta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "40\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1):\n",
+    "    print(len(BETA))\n",
+    "    print(len(AvgR))\n",
+    "    print(len(AvgRHat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "1963-07   -0.39\n",
+       "1963-08    5.07\n",
+       "1963-09   -1.57\n",
+       "1963-10    2.53\n",
+       "1963-11   -0.85\n",
+       "           ... \n",
+       "2021-06    2.75\n",
+       "2021-07    1.27\n",
+       "2021-08    2.90\n",
+       "2021-09   -4.37\n",
+       "2021-10    6.65\n",
+       "Freq: M, Name: Mkt-RF, Length: 700, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MKT"
    ]
   },
   {
@@ -1296,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
